Lektion2 - Lagt till specialattack med tillhörande